--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "~2.4",
+    "@angular/compiler": "~2.4",
+    "@angular/core": "~2.4",
+    "@angular/forms": "~2.4",
+    "@angular/http": "~2.4",
+    "@angular/platform-browser": "~2.4",
+    "@angular/platform-browser-dynamic": "~2.4",
+    "@angular/router": "~3.4",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "~5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "~0.7.6"
   },
   "devDependencies": {
+    "@angular/cli": "1.0.0-rc.1",
+    "@angular/compiler-cli": "^2.4.0",
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.15",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
